fix：fix el-drawer overflow

--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -36,6 +36,12 @@
   }
 }
 
+.el-drawer {
+  .el-drawer__body {
+    overflow: auto;
+  }
+}
+
 // dropdown
 .el-dropdown-menu {
   a {
